<resources>
    <string name="app_name">Companion App for League of Legends</string>
    <string name="type_summmoner_name">Type in your summoner name in League of Legends</string>
    <string name="summoner_name">Summoner Name</string>
    <string name="next">Next</string>
    <string name="select_summoner">Select your Summoner</string>
    <string name="register_new_summoner">Register New Summoner</string>
    <string name="game_active">game active</string>
    <string name="refresh">Refresh</string>
    <string name="champion_description">Champion Description</string>
    <string name="summoner_spell">Summoner Spell</string>
    <string name="summoner_icon">Summoner Icon</string>
    <string name="delete_summoner">Are you sure you want to delete this summoner?</string>
    <string name="summoner_list">Summoner List</string>
    <string name="summoner_not_found">Unable to find summoner</string>
    <string name="network_error">Error while contacting Riot Games servers, check your internet connection</string>
    <string name="cant_select_summoner_not_in_match">You can\'t select a summoner that is not currently in a match!</string>
</resources>
